--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/roboto": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,12 +39,15 @@
     "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.511.0",
+    "mobx": "^6.13.7",
+    "mobx-state-tree": "^7.0.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.16.2",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
