--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.511.0",
     "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "mobx-state-tree": "^7.0.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
