--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
@@ -55,7 +58,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
